@@ -1,0 +1,10 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2025-04-01T14:39:24Z"
+ content="""
+I diagnose a bug introduced in 
+[[!commit 86dbe9a825b9c615c63e0cfc5e4a737a249f8989]]
+that makes it only be able to remove the size if the object file is locally
+present. Fixed.
+"""]]
